--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -11,6 +11,9 @@
     <meta name="description" content="LearnPress | Education & Courses HTML Template"/>
     <meta name="keywords" content="academy, course, education, education html theme, #, learning,"/>
 
+    <link rel="shortcut icon" href="{% static "images/Logo.jpg" %}" type="image/x-icon">
+    <link rel="apple-touch-icon" href="{% static "images/Logo.jpg" %}">
+
 
     <!-- Page Title -->
     <title>Hadaf</title>
